Fixed background image on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-    background: url("../images/game-bg.jpg") no-repeat fixed center;
+    background: url("../images/game-bg.jpg");
+    background-size: cover;
     font-family: "Montserrat", sans-serif;
     margin: 0;
 }
@@ -199,5 +200,15 @@ button[type="submit"] {
         background-color: rgba(0, 0, 0, 0.9);
            font-size: 30px;
        }
+    }
+
+    body {
+        background: url("../images/game-bg.jpg") no-repeat fixed center;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        background: url("../images/game-bg.jpg") no-repeat fixed center;
     }
 }
